# Semantix

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  FEATURE_ROADMAP.md  README.md  SPEC.md
.github/workflows/: lint.yml  release.yml
backend/: db_svc.py  main.py  model_svc.py  models.py  pyproject.toml  requirements.txt  reranker_svc.py  test_db_svc.py
backend/scripts/: download_models.py
backend/tests/: smoke_test.py
backend/utils/: chunker.py
docs/: api.md  architecture.md  changelog.md  retrieval.md  roadmap.md  setup.md
frontend/: README.md  esbuild.config.mjs  eslint.config.mts  manifest.json  package-lock.json  package.json  styles.css  version-bump.mjs  versions.json
frontend/src/: main.ts  settings.ts  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/core/: radar.ts  service-manager.ts  sync.ts  whisperer.ts
frontend/src/i18n/: helpers.ts
frontend/src/i18n/locales/: en.ts  zh-cn.ts
frontend/src/ui/: radar-view.ts  sidebar.ts  whisperer-view.ts
frontend/src/utils/: markdown.ts
