[project]
name = "semantix-backend"
version = "0.3.0"
description = "Semantix 语义雷达 - 本地 AI 后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "sentence-transformers>=3.0.1",
    "lancedb>=0.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
